objects/EUR_CRM_Account_Volume_Tracker_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account_Volume_Tracker__c</fullName>
        <label>Account Volume Tracker (EU)</label>
        <referenceTo>EUR_CRM_Account_Volume_Tracker__c</referenceTo>
        <relationshipLabel>Account Volume Tracker (EU) Line Items</relationshipLabel>
        <relationshipName>Account_Volume_Tracker_EU_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_YTD__c</fullName>
        <label>Actual YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Name__c</fullName>
        <label>Brand Quality Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Account Volume Tracker (EU) Line Items</relationshipLabel>
        <relationshipName>Account_Volume_Tracker_EU_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality (EU)</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Account Volume Tracker (EU) Line Items</relationshipLabel>
        <relationshipName>Account_Volume_Tracker_EU_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand (EU)</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Account Volume Tracker (EU) Line Items</relationshipLabel>
        <relationshipName>Account_Volume_Tracker_EU_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distance_to_Go__c</fullName>
        <formula>EUR_CRM_Target__c - EUR_CRM_Actual_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance to Go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_MTD_9LC_Actual__c</fullName>
        <label>MTD 9LC Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Month_to_Date__c</fullName>
        <label>Month to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Monthly_Average__c</fullName>
        <description>PR PT is the first country to use this field.</description>
        <label>Monthly Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Plan_Fulfillment__c</fullName>
        <label>Plan Fulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Plan__c</fullName>
        <label>Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_QTD_9LC_Actual__c</fullName>
        <label>QTD 9LC Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quarter_to_Date__c</fullName>
        <label>Quarter to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Volume Tracker (EU) Line Item</label>
    <listViews>
        <fullName>EUR_ALL_PT_Account_Volume_Trackers_Items</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account_Volume_Tracker__c</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_Target__c</columns>
        <columns>EUR_CRM_Actual_YTD__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Account_Volume_Tracker_Line_Item__c.EUR_PT_Off_Trade_Account_Volume_Tracker_Line_Item</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Account_Volume_Tracker_Line_Item__c.EUR_PT_On_Trade_Account_Volume_Tracker_Line_Item</value>
        </filters>
        <label>EUR ALL PT Account Volume Trackers Items</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AVTL-{0000000000}</displayFormat>
        <label>Account Volume Tracker Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Volume Tracker (EU) Line Items</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_ZA_Account_Volume_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR ZA Account Volume Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Account_Volume_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Account Volume Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_On_Trade_Account_Volume_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR PT On Trade Account Volume Tracker Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Account_Volume_Tracker_Line_Item</fullName>
        <active>true</active>
        <label>EUR RU Account Volume Tracker Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>